Changed .isBlank to StringUtils